--- a/source/global.css
+++ b/source/global.css
@@ -1,20 +1,5 @@
-*,
-*::before,
-*::after
-{
-  box-sizing: inherit;
-}
-
-:root
-{
-  box-sizing: border-box;
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-body
-{
+body {
   margin: 0;
-  padding: 0;
+  padding: 1em;
   background: #fff;
 }
